Closed Bug 410604 Opened 18 years ago Closed 18 years ago

IAccessible2::Get_UniqueID does not return negative IDs, as specified by IAccessible2 IDL

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla1.9beta3

People

(Reporter: MarcoZ, Assigned: MarcoZ)

References

Details

(Keywords: access)

Attachments

(1 file)

Following a discussion with Mick Curran in mozilla.dev.accessibility, it seems we are not returning negative unique IDs in the NSAccessibleWrap::Get_UniqueID method. See http://lxr.mozilla.org/seamonkey/source/accessible/src/msaa/nsAccessibleWrap.cpp#1316.
This patch is awaiting testing before I ask for Review. Comments welcome if it's OK to keep it this simple.
Assignee: aaronleventhal → marco.zehe
Status: NEW → ASSIGNED
Attachment #295221 - Flags: review+
Comment on attachment 295221 [details] [diff] [review] Make sure the value passed back from NSAccessibleWrap::Get_UniqueID is negative. Thanks for the review, Aaron! I also confirmed that this noww works as expected using Mick's test tool.
Attachment #295221 - Flags: approval1.9?
Attachment #295221 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in accessible/src/msaa/nsAccessibleWrap.cpp; /cvsroot/mozilla/accessible/src/msaa/nsAccessibleWrap.cpp,v <-- nsAccessibleWrap.cpp new revision: 1.101; previous revision: 1.100 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
OS: Windows Vista → All
Hardware: PC → All
Resolution: --- → FIXED
Summary: IAccessible2::Get_UniqueID does not return negative IDs, as specified by IAccessible2 IDL. → IAccessible2::Get_UniqueID does not return negative IDs, as specified by IAccessible2 IDL
Fix verified in Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008010605 Minefield/3.0b3pre using Mick's test tool.
Status: RESOLVED → VERIFIED
I am facing the same problem, that IAccessible2::Get_UniqueID is returning some garbage values, ie, consider I have two tabs, facebook.com and google.com, and facebook is selected first, if we check the Get_UniqueID it will be some -19000, after change the tab to google and when checking Get_UniqueID will be -19054. when we again change the tab to facebook, it is supposed to give -19000 but result from Get_UniqueID will be again some random number. Thanks in advance.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: