Bug 410604 - "IAccessible2::Get_UniqueID does not return negative IDs, as specified by IAccessible2 IDL" [p=marco.zehe@googlemail.com (Marco Zehe) r=aaronlev a1.9=schrep]